# apcdg

./: .clang-format  .clangd  CMakeLists.txt  partitions_webserver.csv  sdkconfig  sdkconfig.old
.github/agents/: esp32.agent.md
.trae/documents/: 重构 WiFi 配网功能为独立移植组件方案.md
components/wifi_provision/: CMakeLists.txt
components/wifi_provision/include/: wifi_provision.h
components/wifi_provision/src/: wifi_provision.c
components/wifi_provision/src/web_server/: ws_server.c  ws_server.h
components/wifi_provision/src/wifi_driver/: wifi_manager.c  wifi_manager.h  wifi_manager_private.h
html/: apcfg.html
main/: CMakeLists.txt  ap_wifi.c  ap_wifi.h  main.c  wifi_manager.c  wifi_manager.h  ws_server.c  ws_server.h
